# simple-kv-with-http-interface

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_bench  Dockerfile_test  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/design/: 001-main-features.md  002-architecture.md  003-kv-implementation.md  004-performance.md  005-http-api.md  005-potential-upgrades.md  006-potential-upgrades.md
src/: dto.py  interfaces.py  main.py
src/handlers/: handler.py  handler_mapper.py  resp_constants.py
src/kv_storage/: interfaces.py  reader.py  storage.py  writer.py
src/server/: resp_constants.py  server.py
tests/: conftest.py  test_bench.py  test_get.py  test_get_many.py  test_set.py
