[project]
name = "sbertestask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typing-extensions>=4.15.0",
    "uvloop",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
    "pytest>=9.0.2",
    "pytest-async-benchmark>=0.2.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "typing-extensions>=4.15.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: mark test as slow (deselect with '-m \"not slow\"')"
]


[tool.pyright]
pythonVersion ="3.13"
strict = ["src"]
strictDictionaryInference = false
strictListInference = false

